# phis_build

./: .gitignore  README.md  VERSION  __main__.py  phis_build.toml  pyproject.toml
phis_build/: __main__.py  args.py  build_steps.py  build_zip.py  build_zipapp.py  config.py  config_tool.bat  get_args.py  logging_config.py  main.py  no_gui_run.bat  run_template.bat  version.py
