[project]
name = "phis-build"
version = "2025.7.21.2"
description = "custom build system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "toml>=0.10.2",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
ignore-vcs = true
packages = ["phis_build", "phis_bin"]
exclude = ["__pycache__", "*.pyc", "*.exe~", "*.syso"]

[tool.hatch.build.targets.wheel]
ignore-vcs = true
packages = ["phis_build", "phis_bin"]
exclude = ["__pycache__", "*.pyc", "*.exe~", "*.syso"]

[project.scripts]
phis_build = "phis_build.main:main"
